# ferrumgw

./: .env  .gitignore  Cargo.toml  FUNCTIONAL_WALKTHROUGH.md  HTTP_PROTOCOL_SUPPORT.md  INCREMENTAL_UPDATES.md  README.md  REQUIREMENTS.md  ROUTER.md  build.rs  ferrumgw_test.db
.sqlx/: query-0d9440e8a4045d411c8756f04b2fdd10bd8634c7152be4fcbbf7dbbdf4e6402e.json  query-0eef88beb3dc5b01c7769fe6465eb23fee520e988b152ffc3cd3e1c7b76295f3.json  query-0f0501e7ca0bef480b4dca322ab6e2ea5d1512c815463f9b7dbcaa650c4eff55.json  query-273d3ba47c5e9b71c181e8c6e78723281eb59e6beb670e436b7dde7e9fa0efe1.json  query-27ba768a47c6f3b87ee827965c17738db429ad8fca455f72bbac8229d580b316.json  query-31fa88fb9d7e9f66e3ec723e1d5b36822205683d131957f45055bca9ceefeeee.json  query-35c2925767d5adae3ce3dae0b1b67394e075f56bd7f57c6a38d0890f540836f7.json  query-35df59ad02aad6c32c962a1767cb757d293b39d60b8bb69bd953b942c90c030e.json  query-3814efd7ef00dc83340ff96c21ff935a2f756070682716909130c55d6327624d.json  query-43be1ce222afa838e76f60f01f1d8f2de874197bb15bfecb55d83ed11060c1a8.json  query-44d7cd74d37d6492eaa98ec863a885dcaccdfb0d4a7e17ab1c3a5bbe65c34507.json  query-59d313f4db507660b6e890b0583e7cfaaf13df2ac8bda3a2a858136845765beb.json  query-59f0bf223e23a087c4b280eafeb47f87a312e8b3b9e6e33f9c590a7cce70a68e.json  query-5a41a979463dd8f6e76fd764edd10ed2c054d26bf198e685156662a82c18153a.json  query-6567907bc12482e3a355c9f11a6b06ed2818aeff94debfaadb00014aedff9a43.json  query-6af2200f3c82b55587e242e892521ffbc8427ab07514eff23aebefc414ceda9a.json  query-6b2ac83d034a9cc75568eb6460a5ab7634516060710fb5e67a8eb6e322a60f2c.json  query-7141fe47bd9b8c81558492e2f2627745472d5593a320c2bb67505777e4271502.json  query-76568cb8ea032b13db087df120b296512de745eb9cae5a0473539ce37af140c1.json  query-77b1bbb176d478e1889e571ac394d746be53d7404033228fdd2e9e3475213f1f.json  query-7e65df8b7364c37a43cf131438116b8a4fe33cd7080fa9697d388efa6c52cf48.json  query-7f234aa54657e2c5ec8faec9ed86c101a1545b7cd64c4cf711c690ac3f454c59.json  query-<hash>.json  (+10 more)
src/: lib.rs  (+2 more)
(+79 files in other folders)
